Compile with Java 17 incl. some fixes of deprecations